Closed Bug 805470 Opened 13 years ago Closed 13 years ago

GCC warnings for "warning: extra ‘;’ [-pedantic]" in /media/mtransport

Categories

(Core :: WebRTC, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla19

People

(Reporter: dholbert, Assigned: dholbert)

References

(Blocks 1 open bug)

Details

(Whiteboard: [qa-])

Attachments

(1 file)

Filing bug for these build warnings in /media/mtransport: media/mtransport/transportlayerdtls.h:116:922: warning: extra ‘;’ [-pedantic] media/mtransport/build/transportlayerdtls.cpp:383:2: warning: extra ‘;’ [-pedantic] media/mtransport/build/transportlayerprsock.cpp:115:1789: warning: extra ‘;’ [-pedantic]
Attached patch fixSplinter Review
Assignee: nobody → dholbert
Status: NEW → ASSIGNED
Attachment #675159 - Flags: review?(rjesup)
Attachment #675159 - Flags: review?(rjesup) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
OS: Linux → All
Hardware: x86_64 → All
Resolution: --- → FIXED
Whiteboard: [qa-]
Target Milestone: --- → mozilla19
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: