Bug 805470: Remove trailing semicolons to fix build warnings in /media/mtransport. r=jesup